swagger added to event
