# GATEWAY/internal/items/http/handler/event/event.handler.go
@@ -28,7 +28,18 @@ func NewEventHandler(logger *slog.Logger, event pb.EventServiceClient, redis *re
 	}
 }
 
-func (h *EventHandler) CreateEvent(c *gin.Context) {
+// CreateEventHandler godoc
+// @Summary Create a new event
+// @Description Create a new event by providing the event details
+// @Tags Admin Events
+// @Accept  json
+// @Produce  json
+// @Param event body pb.CreateEventRequest true "Event details"
+// @Success 200 {object} gin.H 
+// @Failure 400 {object} gin.H 
+// @Failure 500 {object} gin.H 
+// @Router /admin/events/ [post]
+func (h *EventHandler) CreateEventHandler(c *gin.Context) {
 	h.logger.Info("CreateEvent")
 
 	var req pb.CreateEventRequest
@@ -52,7 +63,19 @@ func (h *EventHandler) CreateEvent(c *gin.Context) {
 	c.JSON(200, gin.H{"message": "Event created successfully"})
 }
 
-func (h *EventHandler) UpdateEvent(c *gin.Context) {
+// UpdateEventHandler godoc
+// @Summary Update an existing event
+// @Description Update an event by providing the event ID and details
+// @Tags Admin Events
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Event ID"
+// @Param event body pb.UpdateEventRequest true "Event details"
+// @Success 200 {object} gin.H 
+// @Failure 400 {object} gin.H 
+// @Failure 500 {object} gin.H 
+// @Router /admin/events/{id} [put]
+func (h *EventHandler) UpdateEventHandler(c *gin.Context) {
 	h.logger.Info("UpdateEvent")
 	var req pb.UpdateEventRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -75,7 +98,17 @@ func (h *EventHandler) UpdateEvent(c *gin.Context) {
 	c.JSON(200, gin.H{"message": "Event updated successfully"})
 }
 
-func (h *EventHandler) DeleteEvent(c *gin.Context) {
+// DeleteEventHandler godoc
+// @Summary Delete an event
+// @Description Delete an event by providing the event ID
+// @Tags Admin Events
+// @Produce  json
+// @Param id path string true "Event ID"
+// @Success 200 {object} gin.H 
+// @Failure 400 {object} gin.H 
+// @Failure 500 {object} gin.H 
+// @Router /admin/events/{id} [delete]
+func (h *EventHandler) DeleteEventHandler(c *gin.Context) {
 	h.logger.Info("DeleteEvent")
 
 	id := c.Param("id")
@@ -99,7 +132,17 @@ func (h *EventHandler) DeleteEvent(c *gin.Context) {
 	c.JSON(200, gin.H{"message": "Event deleted successfully"})
 }
 
-func (h *EventHandler) GetEvent(c *gin.Context) {
+// GetEventHandler godoc
+// @Summary Get an event by ID
+// @Description Retrieve an event by providing the event ID
+// @Tags Admin Events
+// @Produce  json
+// @Param id path string true "Event ID"
+// @Success 200 {object} pb.Event "Event details"
+// @Failure 400 {object} gin.H 
+// @Failure 500 {object} gin.H 
+// @Router /admin/events/{id} [get]
+func (h *EventHandler) GetEventHandler(c *gin.Context) {
 	h.logger.Info("GetEvent")
 	id := c.Param("id")
 
@@ -117,7 +160,18 @@ func (h *EventHandler) GetEvent(c *gin.Context) {
 	c.JSON(200, event)
 }
 
-func (h *EventHandler) GetEventBySport(c *gin.Context) {
+// GetEventBySportHandler godoc
+// @Summary Get events by sport
+// @Description Retrieve events based on the sport by providing sport details
+// @Tags Admin Events
+// @Accept  json
+// @Produce  json
+// @Param sport body pb.GetEventBySportRequest true "Sport details"
+// @Success 200 {object} pb.GetEventBySportResponse "List of events"
+// @Failure 400 {object} gin.H 
+// @Failure 500 {object} gin.H 
+// @Router /admin/events/sport [get]
+func (h *EventHandler) GetEventBySportHandler(c *gin.Context) {
 	h.logger.Info("GetAllEvents")
 
 	var req pb.GetEventBySportRequest
